trying to fix nav bar alignment

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -36,6 +36,10 @@ img {
     background-color: lightgray;
 }
 
+ul > li {
+    justify-content: space-around;
+}
+
 @media all and (max-width: 980px) {
     .container {
         flex-wrap: wrap;
